apps/kube/discordsh/manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: discordsh
  labels:
    name: discordsh
