apps/kube/discordsh/manifest/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: discordsh-route
    namespace: discordsh
spec:
    parentRefs:
        - name: kbve-gateway
          namespace: kbve
    hostnames:
        - discord.sh
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: discordsh-service
                port: 80
