apps/kube/discordsh/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: discordsh-ingress
    namespace: discordsh
    labels:
        app: discordsh
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
        nginx.ingress.kubernetes.io/ssl-redirect: 'true'
        cert-manager.io/cluster-issuer: 'letsencrypt-http'
        nginx.ingress.kubernetes.io/proxy-body-size: '10m'
        nginx.ingress.kubernetes.io/proxy-connect-timeout: '60'
        nginx.ingress.kubernetes.io/proxy-send-timeout: '60'
        nginx.ingress.kubernetes.io/proxy-read-timeout: '60'
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - discord.sh
          secretName: discordsh-tls
    rules:
        - host: discord.sh
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: discordsh-service
                            port:
                                number: 80
